[tool.poetry]
name = "trip-planner-yt"
version = "0.1.0"
description = "Simple AI trip planner"
authors = ["Joao Moura", "Brandon Hancock"]

[tool.poetry.dependencies]
python = ">=3.10.0, <3.12"
crewai = "0.1.24"
unstructured = "0.10.25"
pyowm = "3.3.0"
tools = "^0.1.9"
python-dotenv = "1.0.0"
langchain = "0.0.354"  # Use the version required by crewai

[tool.pyright]
useLibraryCodeForTypes = true
exclude = ["__pycache__"]

[tool.ruff]
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry-api"
